bebytes/tests/compile_time/unsupported_f64.stderr
error: Unsupported type for bits attribute. Only integer types (u8, i8, u16, i16, u32, i32, u64, i64, u128, i128) are supported
  --> tests/compile_time/unsupported_f64.rs:12:13
   |
12 |     second: f64,
   |             ^^^
